update TTL cache, header overflow fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -332,6 +332,21 @@ body {
   border-radius: 2rem;
   padding: 0 1px;
 }
+.scrollbar-tiny::-webkit-scrollbar {
+  height: 0px;
+  width: 4px;
+}
+
+.scrollbar-tiny::-webkit-scrollbar-thumb {
+  background-color: #6302dd;
+  border-radius: 2rem;
+}
+
+.scrollbar-tiny::-webkit-scrollbar-track {
+  background-color: #9b4aff;
+  border-radius: 2rem;
+  padding: 0 1mm;
+}
 
 .line {
   height: 3rem;
